[metadata]
name = rdopkg
summary = RDO packaging utility
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Jakub Ruzicka
author-email = jruzicka@redhat.com
home-page = https://github.com/softwarefactory-project/rdopkg
keywords =


[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    rdopkg

[entry_points]
console_scripts =
    rdopkg = rdopkg.cli:main

[aliases]
test=pytest
