[metadata]
name = rdopkg
summary = RPM packaging automation tool
description_file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Jakub Ruzicka
author_email = jruzicka@redhat.com
home_page = https://github.com/softwarefactory-project/rdopkg
keywords =

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    rdopkg

[entry_points]
console_scripts =
    rdopkg = rdopkg.cli:main

[options.extras_require]
lint=
    rpmlint

[aliases]
test=pytest

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs
# H803 skipped on purpose per list discussion.
# E123, E125, W503 skipped as they are invalid PEP-8.
# W605 skipped due to false positives
ignore = E123,E125,H803,W503,W605
show-source = True

[coverage:run]
parallel=true
